more frontend stuff, main addition is the mobile navigation, it opens on the side of the screen and the button for it is fixed to the bottom right of the screen, for easy use by any individual (users wont have to do the awkward one hand crawl up the phone to press a button when only one hand is available, and other cases), my only worry with this is the Safari search bar on iPhone, in the past (maybe I did things wrong) fixed content at the bottom of the screen fell below the search bar on certain scrolls, so I will look into this and make sure the placement is ideal!

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,10 @@
 
 body {
     background-color: #222;
+    color: #fffddd
+}
+
+a.active {
+    text-decoration: underline;
+    text-underline-offset: 5px;
 }
